kubernetes/apps/app-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: microservices-orchestration/api
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: apps
  labels:
    app: api
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: api
  type: NodePort
