kubernetes/apps/app-processor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
        - name: api
          image: microservices-orchestration/processor
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: processor
  namespace: apps
  labels:
    app: processor
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: processor
